<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/avatarSelectionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background_color"
    android:padding="16dp">

    <TextView
        android:id="@+id/coinBalanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moedas_0"
        android:textSize="18sp"
        android:textColor="@color/colorOnPrimary"
        android:fontFamily="@font/roboto_mediu"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp" />




    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escolha_seu_avatar"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="12dp" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/avatar_background_selector"
        android:contentDescription="@string/avatar_image"
        android:scaleType="centerCrop"
        android:padding="4dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAvatars"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_avatar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/primaryColor"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

</LinearLayout>
