<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_background">

    <!-- Ícone motivacional -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/dialog_icon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/dialog_icon"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.LargeComponent" />

    <!-- Título -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dialog_message_default"
        android:textSize="22sp"
        android:textColor="@color/progress_green"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_mediu"
        android:layout_gravity="center"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2" />

    <!-- Mensagem -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_message_default"
        android:textSize="16sp"
        android:textColor="@color/progress_green"
        android:gravity="center"
        android:layout_marginBottom="22dp"
        android:layout_gravity="center_horizontal"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2" />

    <!-- Botão -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center"
        app:cornerRadius="100dp"
        app:elevation="4dp" />
</LinearLayout>
